--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -158,7 +158,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">12:00pm - 1:00pm</span>
-                          <span class="location">Room 503</span>
+                          <span class="location">500's Corridor</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
@@ -238,7 +238,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">12:00pm - 1:00pm</span>
-                          <span class="location">Room 505</span>
+                          <span class="location">500's Corridor</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
