--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -48,7 +48,7 @@
                             <span class="title">GopherCon 2016 Party</span>
                           </div>
                           <div class="abstract">
-                            <p>The Official GopherCon After-Party hosted by our Diamond Sponsor</p>
+                            <p>The Official GopherCon After Party hosted by our Diamond Sponsor</p>
                             <p>Details are available here: <a href="/events/afterparty">GopherCon After Party</a></p>
                           </div>
                         </div>
