Update workshop trainers

--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -82,7 +82,7 @@
                           <div class="schedule-item-summary">
                             <span class="title">Ultimate Go Workshop</span>
                             <div class="speaker">
-                              <span class="name">William Kennedy</span>
+                              <span class="name">Kevin Gillette &amp; Levi Cook</span>
                               <span class="designation">Ardan Labs</span>
                             </div>
                           </div>
@@ -146,7 +146,7 @@
                           <div class="schedule-item-summary">
                             <span class="title">Advanced Go Workshop</span>
                             <div class="speaker">
-                              <span class="name">TBD</span>
+                              <span class="name">William Kennedy &amp; Cory LaNou</span>
                               <span class="designation">Ardan Labs</span>
                             </div>
                           </div>
