Update API workshop room

--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -206,7 +206,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 5:00pm</span>
-                          <span class="location">Room 505</span>
+                          <span class="location">Rooms 505-506</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
