add social feed to nav

--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -24,6 +24,7 @@
                 <li><a href="/location">Location</a></li>
                 <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
                 <li><a href="/guide-program">Guide Program</a></li>
+                <li><a href="/socialfeed">Live Social Media Feed</a></li>
               </ul>
             </li>
             <li><a class="inner-link" href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
