--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -41,6 +41,15 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Mile High Ballroom Pre-Function</span>
+                    </div>
+                    <div class="col-md-9 schedule-item-details">
+		      <span class="title">Twitch Hack Day Lounge</span>
+		    </div>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4a – 4b</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
