--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -28,6 +28,7 @@
               </ul>
             </li>
             <li><a class="inner-link" href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
+           <li><a class="inner-link" href="https://twitch.tv/gophercon">Watch Live</a></li>
             <li class="has-dropdown">
               <a href="#">Events</a>
               <ul class="nav-dropdown">
