add twitch link

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -102,9 +102,9 @@
                 </div>
               
                 <div class="col-md-4 col-sm-8">
-                  <h1>Need Tickets?</h1>
+                  <h1>Watch Live!</h1>
                   <p>
-                    Get your tickets early and guarantee your entrance to the largest Go conference in the world.
+                    Stream the event live starting at 8:50 MDT July 11th at <a href="http://twitch.tv/gophercon">twitch.tv/gophercon</a>
                   </p>
                 </div>
               </a>
