Apcera hack day room will be for NATS only

--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -91,7 +91,7 @@
                       <span class="location">Room: 4e</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
-	              <span class="title">Apcera</span>
+	              <span class="title">NATS for Microservices</span>
 		    </div>
                   </div> 
                   <div class="row schedule-item">
