go project schedule

--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -72,7 +72,8 @@
                       <span class="location">Room: 4d</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
-                      <span class="title">Go Team</span>
+                      <span class="title">Go Project Room</span>
+		      <div class="abstract">Anyone involved in the Go project is welcome, regardless of the team you are on.  <a href="http://golang.org/s/gophercon-go-room">Additional Notes</a></div>
 		    </div>
                   </div>
                   <div class="row schedule-item">
